--- a/index.html
+++ b/index.html
@@ -12,6 +12,66 @@
     <header>
 <!-- NOM DU SITE -->
             <h1>ohmyfood</h1>
-    </header> 
+    </header>
+    <main>
+<!-- RECHERCHE -->
+    <section class="recherche">
+        <i class="fas fa-map-marker-alt"></i>
+        <h2>Paris, Belleville</h2>
+    </section>
+<!-- EXPLORER -->
+        <section class="explorer padding-main">
+            <h2>Réservez le menu qui <br>vous convient</h2>
+            <p>Dévouvrez des restaurants d'exception, <br>sélectionnés par nos soins.</p>
+            <button>Explorer nos restaurants</button>
+        </section>
+        <section class="fonctionnement padding-main">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            </ol>
+        </section>
+        <section class="menus padding-main">
+            <h2>Restaurants</h2>
+            <div class="menus-cartes12">
+                <a href="#" class="carte nouveau">
+                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-1.jpg" alt="La palette du goût">
+                    <div class="carte-description">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                        <i class="far fa-heart"></i>
+                    </div>
+                </a>
+                <a href="#" class="carte nouveau">
+                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-2.jpg" alt="La note enchantée">
+                    <div class="carte-description">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                        <i class="far fa-heart"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="menus-cartes34">
+                <a href="#" class="carte nouveau">
+                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-3.jpg" alt="À la française">
+                    <div class="carte-description">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                        <i class="far fa-heart"></i>
+                    </div>
+                </a>
+                <a href="#" class="carte nouveau">
+                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-4.jpg" alt="Le délice des sens">
+                    <div class="carte-description">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                        <i class="far fa-heart"></i>
+                    </div>
+                </a>
+            </div>
+        </section>
+    </main>  
 </body>
 </html>
