--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <h2>Paris, Belleville</h2>
     </section>
 <!-- EXPLORER -->
-        <section class="explorer padding-main">
+        <section class="explorer">
             <h2>Réservez le menu qui <br>vous convient</h2>
             <p>Dévouvrez des restaurants d'exception, <br>sélectionnés par nos soins.</p>
             <button>Explorer nos restaurants</button>
         </section>
+<!-- FONCTIONNEMENT -->
         <section class="fonctionnement padding-main">
             <h2>Fonctionnement</h2>
             <ol>
@@ -33,6 +34,7 @@
                 <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
+<!-- RESTAURANTS -->
         <section class="menus padding-main">
             <h2>Restaurants</h2>
             <div class="menus-cartes12">
@@ -42,6 +44,7 @@
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
                 <a href="#" class="carte nouveau">
@@ -50,6 +53,7 @@
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
             </div>
@@ -60,6 +64,7 @@
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
                 <a href="#" class="carte nouveau">
@@ -68,10 +73,28 @@
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </a>
             </div>
         </section>
-    </main>  
+    </main>
+    <footer>
+        <h2>ohmyfood</h2>
+        <div class="flex">
+            <i class="fas fa-utensils fa-xs filtre-icon"></i>
+            <a href="">Proposer un restaurant</a>
+        </div>
+        <div class="flex">
+            <i class="fas fa-hands-helping fa-xs filtre-icon"></i>
+            <a href="">Devenir partenaire</a>
+        </div>
+        <div>
+            <a href="">Mentions légales</a>
+        </div>
+        <div>
+            <a href="mailto:kevin.leboucher@outlook.fr">Contact</a>
+        </div>
+    </footer>
 </body>
 </html>
