Finalisation du site ( page des menus, accueil)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./Maquettes-Ohmyfood/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Maquettes-Ohmyfood/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Maquettes-Ohmyfood/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <script src="https://kit.fontawesome.com/135b9a548a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="homepage">
+    <div class="loader"></div>
     <header>
-<!-- NOM DU SITE -->
             <h1>ohmyfood</h1>
     </header>
     <main>
@@ -38,8 +42,8 @@
         <section class="menus padding-main">
             <h2>Restaurants</h2>
             <div class="menus-cartes12">
-                <a href="#" class="carte nouveau">
-                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-1.jpg" alt="La palette du goût">
+                <a href="./pages/resto-1.html" class="carte nouveau">
+                    <img class=carte-image src="./Maquettes-Ohmyfood/images/restaurants/menu-1.jpg" alt="La palette du goût">
                     <div class="carte-description">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
@@ -47,8 +51,8 @@
                         <i class="fas fa-heart"></i>
                     </div>
                 </a>
-                <a href="#" class="carte nouveau">
-                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-2.jpg" alt="La note enchantée">
+                <a href="./pages/resto-2.html" class="carte nouveau">
+                    <img class=carte-image src="./Maquettes-Ohmyfood/images/restaurants/menu-2.jpg" alt="La note enchantée">
                     <div class="carte-description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
@@ -58,8 +62,8 @@
                 </a>
             </div>
             <div class="menus-cartes34">
-                <a href="#" class="carte nouveau">
-                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-3.jpg" alt="À la française">
+                <a href="./pages/resto-3.html" class="carte nouveau">
+                    <img class=carte-image src="./Maquettes-Ohmyfood/images/restaurants/menu-3.jpg" alt="À la française">
                     <div class="carte-description">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
@@ -67,8 +71,8 @@
                         <i class="fas fa-heart"></i>
                     </div>
                 </a>
-                <a href="#" class="carte nouveau">
-                    <img class=carte-image src="/Maquettes Ohmyfood/images/restaurants/menu-4.jpg" alt="Le délice des sens">
+                <a href="./pages/resto-4.html" class="carte nouveau">
+                    <img class=carte-image src="./Maquettes-Ohmyfood/images/restaurants/menu-4.jpg" alt="Le délice des sens">
                     <div class="carte-description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
